# locational-marginal-pricing-for-arbitrage-in-power-markets

./: 02_anomaly_detection_production.py  02_anomaly_detection_production.py.bak  02_lmp_analysis_blog.md  02_lmp_analysis_blog.md.bak  02_lmp_analysis_blog_linkedin_post.md  02_visualizations.py  README.md  article.md  benchmark_rust.py  pyproject.toml
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py
